--- a/.prettierrc
+++ b/.prettierrc
@@ -1,11 +1,12 @@
 {
   "semi": true,
-  "trailingComma": "all",
+  "trailingComma": "es5",
   "useTabs": false,
   "tabWidth": 2,
   "singleQuote": true,
-  "printWidth": 140,
+  "printWidth": 100,
   "arrowParens": "avoid",
-  "proseWrap": "preserve",
-  "bracketSpacing": true
+  "bracketSpacing": true,
+  "bracketSameLine": true,
+  "proseWrap": "preserve"
 }
