--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,16 @@
     }
   },
   "angular.log": "verbose",
-  "cSpell.words": ["firebaseapp", "Llecoop"]
+  "cSpell.words": [
+    "Comandes",
+    "Etiquetes",
+    "firebaseapp",
+    "Llecoop",
+    "Llevat",
+    "Perfil",
+    "Productes",
+    "sessió",
+    "Tancar",
+    "Usuaris"
+  ]
 }
