refactor(shared/list-view): #278 add a shared list view lib to add views with table + filter form
ISSUES CLOSED: #278

--- a/libs/shared/table/ui/project.json
+++ b/libs/shared/table/ui/project.json
@@ -4,7 +4,7 @@
   "projectType": "library",
   "sourceRoot": "libs/shared/table/ui/src",
   "prefix": "plastik",
-  "tags": ["scope:shared", "type:feature"],
+  "tags": ["scope:shared", "type:ui"],
   "targets": {
     "test": {
       "executor": "@nx/jest:jest",
