--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,11 +21,16 @@
               },
               {
                 "sourceTag": "scope:core",
-                "onlyDependOnLibsWithTags": ["scope:core", "type:entity", "type:util", "scope:shared"]
+                "onlyDependOnLibsWithTags": [
+                  "scope:core",
+                  "type:entity",
+                  "type:util",
+                  "scope:shared"
+                ]
               },
               {
                 "sourceTag": "scope:shared",
-                "onlyDependOnLibsWithTags": ["scope:shared"]
+                "onlyDependOnLibsWithTags": ["scope:shared", "type:entity"]
               },
               {
                 "sourceTag": "scope:nasa-images",
@@ -37,7 +42,13 @@
               },
               {
                 "sourceTag": "type:feature",
-                "onlyDependOnLibsWithTags": ["type:ui", "type:util", "type:data-access", "type:entity", "type:feature"]
+                "onlyDependOnLibsWithTags": [
+                  "type:ui",
+                  "type:util",
+                  "type:data-access",
+                  "type:entity",
+                  "type:feature"
+                ]
               },
               {
                 "sourceTag": "type:ui",
@@ -112,7 +123,10 @@
     },
     {
       "files": ["*.html"],
-      "extends": ["plugin:@angular-eslint/template/recommended", "plugin:@angular-eslint/template/accessibility"],
+      "extends": [
+        "plugin:@angular-eslint/template/recommended",
+        "plugin:@angular-eslint/template/accessibility"
+      ],
       "rules": {
         "@angular-eslint/template/no-positive-tabindex": "error",
         "@angular-eslint/template/alt-text": "error",
@@ -131,7 +145,6 @@
         "@angular-eslint/use-lifecycle-interface": "error",
         "@angular-eslint/prefer-output-readonly": "error",
         "@angular-eslint/component-max-inline-declarations": "error",
-        "@angular-eslint/template/no-call-expression": "error",
         "@angular-eslint/template/use-track-by-function": "error",
         "@angular-eslint/use-pipe-transform-interface": "error",
         "@angular-eslint/no-conflicting-lifecycle": "error",
