--- a/libs/shared/layouts/feature/table-with-filtering/tsconfig.lib.json
+++ b/libs/shared/layouts/feature/table-with-filtering/tsconfig.lib.json
@@ -1,12 +1,12 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "../../../../dist/out-tsc",
+    "outDir": "../../../../../dist/out-tsc",
     "declaration": true,
     "declarationMap": true,
     "inlineSources": true,
     "types": []
   },
   "exclude": ["src/**/*.spec.ts", "src/test-setup.ts", "jest.config.ts", "src/**/*.test.ts"],
-  "include": ["src/**/*.ts", "../feature/src/lib/llecoop-category-feature-table.config.ts"]
+  "include": ["src/**/*.ts"]
 }
