--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-architects/ngrx-toolkit": "^18.0.3",
     "@angular/animations": "~18.1.0",
     "@angular/cdk": "18.1.3",
     "@angular/common": "~18.1.0",
