--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,13 +16,6 @@
   "workbench.editor.wrapTabs": false,
   "html.format.wrapAttributes": "force-expand-multiline",
   "files.trimTrailingWhitespace": true,
-  "[typescript]": {
-    "editor.defaultFormatter": "dbaeumer.vscode-eslint",
-    "editor.codeActionsOnSave": {
-      "source.organizeImports": "explicit",
-      "source.fixAll.eslint": "explicit"
-    }
-  },
   "[html]": {
     "editor.defaultFormatter": "vscode.html-language-features",
     "editor.codeActionsOnSave": {
@@ -62,5 +55,6 @@
     "sessió",
     "Tancar",
     "Usuaris"
-  ]
+  ],
+  "editor.formatOnPaste": true
 }
