--- a/package.json
+++ b/package.json
@@ -150,6 +150,7 @@
     "autoprefixer": "^10.4.20",
     "branch-name-lint": "^2.1.1",
     "commitizen": "^4.3.0",
+    "cspell": "^8.14.2",
     "cypress": "^13.13.0",
     "cypress-pipe": "^2.0.0",
     "cz-customizable": "^7.2.1",
