ci(llecoop): #292 add github deploy to ftp for llecoop app
ISSUES CLOSED: #292

--- a/.github/workflows/llecoop-deploy-main.yml
+++ b/.github/workflows/llecoop-deploy-main.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Install dependencies
         run: |
           yarn install --immutable --network-timeout 1000000
-          yarn nx build llecoop --prod
+          yarn nx build llecoop --prod --base-href /botiga.llevat.org/
 
       - name: Set up FTP
         uses: SamKirkland/FTP-Deploy-Action@v4.3.5
