--- a/.github/workflows/llecoop-deploy-main.yml
+++ b/.github/workflows/llecoop-deploy-main.yml
@@ -30,18 +30,6 @@ jobs:
           echo "  appId: '${{ secrets.FIREBASE_APP_ID }}'," >> apps/llecoop/firebase.ts
           echo "};" >> apps/llecoop/firebase.ts
 
-      - name: Set up firebase
-        run: |
-          echo "export const firebaseConfig = {" > apps/llecoop/firebase.ts
-          echo "  apiKey: '${{ secrets.FIREBASE_API_KEY }}'," >> apps/llecoop/firebase.ts
-          echo "  authDomain: '${{ secrets.FIREBASE_AUTH_DOMAIN }}'," >> apps/llecoop/firebase.ts
-          echo "  databaseURL: '${{ secrets.FIREBASE_DATABASE_URL }}'," >> apps/llecoop/firebase.ts
-          echo "  projectId: '${{ secrets.FIREBASE_PROJECT_ID }}'," >> apps/llecoop/firebase.ts
-          echo "  storageBucket: '${{ secrets.FIREBASE_STORAGE_BUCKET }}'," >> apps/llecoop/firebase.ts
-          echo "  messagingSenderId: '${{ secrets.FIREBASE_MESSAGING_SENDER_ID }}'," >> apps/llecoop/firebase.ts
-          echo "  appId: '${{ secrets.FIREBASE_APP_ID }}'," >> apps/llecoop/firebase.ts
-          echo "};" >> apps/llecoop/firebase.ts
-
       - name: Install dependencies
         run: |
           yarn install --immutable --network-timeout 1000000
@@ -54,4 +42,4 @@ jobs:
           username: ${{ secrets.LLECOOP_FTP_USERNAME }}
           password: ${{ secrets.LLECOOP_FTP_PASSWORD }}
           local-dir: ./dist/apps/llecoop/browser/
-          server-dir: /home/llevator/domains/llevat.org/public_html/botiga/
+          server-dir: /
