feat(llecoop/product/list): #288 add llecoop products list view
ISSUES CLOSED: #288

--- a/libs/llecoop/category/feature/tsconfig.lib.json
+++ b/libs/llecoop/category/feature/tsconfig.lib.json
@@ -8,5 +8,9 @@
     "types": []
   },
   "exclude": ["src/**/*.spec.ts", "src/test-setup.ts", "jest.config.ts", "src/**/*.test.ts"],
-  "include": ["src/**/*.ts", "../data-access/src/lib/llecoop-category-feature-table.config.ts"]
+  "include": [
+    "src/**/*.ts",
+    "../data-access/src/lib/category-feature-table.config.ts",
+    "src/lib/category-list-facade.service.ts"
+  ]
 }
