--- a/libs/llecoop/product/data-access/tsconfig.lib.json
+++ b/libs/llecoop/product/data-access/tsconfig.lib.json
@@ -8,9 +8,5 @@
     "types": []
   },
   "exclude": ["src/**/*.spec.ts", "src/test-setup.ts", "jest.config.ts", "src/**/*.test.ts"],
-  "include": [
-    "src/**/*.ts",
-    "src/lib/category-feature-table.config.ts",
-    "../feature/src/lib/category-list-facade.service.ts"
-  ]
+  "include": ["src/**/*.ts"]
 }
