refactor(llecoop): #304 refactor and clean product and category features
CLOSES #304

--- a/libs/llecoop/data-access/.eslintrc.json
+++ b/libs/llecoop/data-access/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-  "extends": ["../../../../../.eslintrc.json", "../../../../../apps/llecoop/.eslintrc.json"],
+  "extends": ["../../../.eslintrc.json"],
   "ignorePatterns": ["!**/*"],
   "overrides": [
     {
