--- a/libs/core/table-with-filtering/tsconfig.json
+++ b/libs/core/table-with-filtering/tsconfig.json
@@ -20,7 +20,7 @@
       "composite": true
     }
   ],
-  "extends": "../../../../../tsconfig.base.json",
+  "extends": "../../../tsconfig.base.json",
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
