--- a/libs/llecoop/category/feature/list/project.json
+++ b/libs/llecoop/category/feature/list/project.json
@@ -1,16 +1,16 @@
 {
-  "name": "table-with-filtering",
+  "name": "llecoop-category-feature-list",
   "$schema": "../../../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/shared/layouts/feature/table-with-filtering/src",
+  "sourceRoot": "libs/llecoop/category/feature/list/src",
   "prefix": "plastik",
   "projectType": "library",
-  "tags": ["type:feature", "scope:shared"],
+  "tags": ["type:feature", "scope:llecoop"],
   "targets": {
     "test": {
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/shared/layouts/feature/table-with-filtering/jest.config.ts"
+        "jestConfig": "libs/llecoop/category/feature/list/jest.config.ts"
       }
     },
     "lint": {
