--- a/libs/llecoop/data-access/tsconfig.lib.json
+++ b/libs/llecoop/data-access/tsconfig.lib.json
@@ -1,7 +1,7 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "../../../../dist/out-tsc",
+    "outDir": "../../../dist/out-tsc",
     "declaration": true,
     "declarationMap": true,
     "inlineSources": true,
@@ -10,7 +10,6 @@
   "exclude": ["src/**/*.spec.ts", "src/test-setup.ts", "jest.config.ts", "src/**/*.test.ts"],
   "include": [
     "src/**/*.ts",
-    "../data-access/src/lib/category-feature-table.config.ts",
-    "src/lib/category-list-facade.service.ts"
+    "../../core/table-with-filtering/src/lib/table-with-filtering/table-with-filtering-facade.type.ts"
   ]
 }
