--- a/apps/llecoop/tsconfig.json
+++ b/apps/llecoop/tsconfig.json
@@ -14,13 +14,16 @@
   "include": [],
   "references": [
     {
-      "path": "./tsconfig.app.json"
+      "path": "./tsconfig.app.json",
+      "composite": true
     },
     {
-      "path": "./tsconfig.spec.json"
+      "path": "./tsconfig.spec.json",
+      "composite": true
     },
     {
-      "path": "./tsconfig.editor.json"
+      "path": "./tsconfig.editor.json",
+      "composite": true
     }
   ],
   "extends": "../../tsconfig.base.json",
