--- a/package.json
+++ b/package.json
@@ -105,7 +105,6 @@
     "@nx/angular": "19.5.6",
     "angular-svg-icon": "^18.0.1",
     "babel-loader": "^8.0.2",
-    "firebase": "^10.12.5",
     "moment": "^2.30.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -137,6 +136,7 @@
     "@nx/web": "19.5.6",
     "@nx/workspace": "19.5.6",
     "@schematics/angular": "~18.1.0",
+    "@simondotm/nx-firebase": "^2.3.0",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
