feat(llecoop/category/detail): #308 add detail page for creating new categories
ISSUES CLOSED: #308

--- a/libs/llecoop/category/data-access/tsconfig.lib.json
+++ b/libs/llecoop/category/data-access/tsconfig.lib.json
@@ -11,6 +11,7 @@
   "include": [
     "src/**/*.ts",
     "src/lib/category-feature-table.config.ts",
-    "../feature/list/src/lib/category-list-facade.service.ts"
+    "../feature/list/src/lib/category-list-facade.service.ts",
+    "../feature/list/src/lib/category-feature-search-form.config.ts"
   ]
 }
