--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "angular-svg-icon": "^18.0.1",
     "babel-loader": "^8.0.2",
     "moment": "^2.30.1",
+    "ngx-colors": "^3.6.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
