--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -44,6 +44,7 @@
       "@plastik/llecoop/data-access": ["libs/llecoop/data-access/src/index.ts"],
       "@plastik/llecoop/entities": ["libs/llecoop/entities/src/index.ts"],
       "@plastik/llecoop/product/data-access": ["libs/llecoop/product/data-access/src/index.ts"],
+      "@plastik/llecoop/product/detail": ["libs/llecoop/product/feature/detail/src/index.ts"],
       "@plastik/llecoop/product/list": ["libs/llecoop/product/feature/list/src/index.ts"],
       "@plastik/nasa-images/data-access": ["libs/nasa-images/data-access/src/index.ts"],
       "@plastik/nasa-images/faqs": ["libs/nasa-images/faqs/feature/src/index.ts"],
