--- a/.github/workflows/llecoop-deploy-main.yml
+++ b/.github/workflows/llecoop-deploy-main.yml
@@ -1,9 +1,9 @@
-name: Deploy Llecoop to hosting
+name: Deploy Llecoop to remote hosting
 
 on:
   push:
     branches:
-      - develop
+      - main
 
 jobs:
   deploy:
@@ -34,7 +34,7 @@ jobs:
         run: |
           yarn install --immutable --network-timeout 1000000
           yarn nx build llecoop --prod --skip-nx-cache
-      # yarn nx build llecoop --prod
+
       - name: Set up FTP
         uses: SamKirkland/FTP-Deploy-Action@v4.3.5
         with:
