--- a/.gitignore
+++ b/.gitignore
@@ -53,4 +53,14 @@ pa11y-ci-report
 **/firebase.*
 
 # trash
-/trash
+/trash# Nx-Firebase
+.runtimeconfig.json
+**/.emulators/*
+**/.firebase/*
+database-debug.log
+firebase-debug.log
+firestore-debug.log
+pubsub-debug.log
+ui-debug.log
+firebase-export*
+.secret.local
