--- a/libs/llecoop/product/data-access/tsconfig.lib.json
+++ b/libs/llecoop/product/data-access/tsconfig.lib.json
@@ -8,5 +8,9 @@
     "types": []
   },
   "exclude": ["src/**/*.spec.ts", "src/test-setup.ts", "jest.config.ts", "src/**/*.test.ts"],
-  "include": ["src/**/*.ts", "../feature/list/src/lib/product-feature-table.config.ts"]
+  "include": [
+    "src/**/*.ts",
+    "../feature/list/src/lib/product-feature-table.config.ts",
+    "src/product-store.ts"
+  ]
 }
