--- a/package.json
+++ b/package.json
@@ -63,6 +63,8 @@
     "llecoop:a11y:run": "pa11y-ci --config ./apps/llecoop/.pa11yci.json",
     "llecoop:a11y": "npm-run-all --parallel --race llecoop:http-server llecoop:a11y:run",
     "llecoop:build:github": "nx run llecoop:build:prod",
+    "llecoop:firestore": "firebase emulators:start --only firestore",
+    "llecoop:emulate": "yarn nx run llecoop-firebase:emulate",
     "experimental:serve": "nx run experimental:serve",
     "experimental:lint": "nx run experimental:lint",
     "experimental:build": "nx run experimental:build --parallel",
@@ -133,9 +135,11 @@
     "@nx/eslint-plugin": "19.5.6",
     "@nx/jest": "19.5.6",
     "@nx/js": "19.5.6",
+    "@nx/node": "19.5.6",
     "@nx/web": "19.5.6",
     "@nx/workspace": "19.5.6",
     "@schematics/angular": "~18.1.0",
+    "@simondotm/nx-firebase": "^2.3.0",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
@@ -161,6 +165,8 @@
     "eslint-plugin-deprecation": "^1.5.0",
     "eslint-plugin-jsdoc": "^48.11.0",
     "eslint-plugin-ngrx": "^2.1.4",
+    "firebase-functions-test": "^3.1.1",
+    "firebase-tools": "^12.9.1",
     "husky": "^9.1.4",
     "jasmine-marbles": "~0.9.2",
     "jest": "29.7.0",
@@ -168,6 +174,7 @@
     "jest-environment-jsdom": "29.7.0",
     "jest-preset-angular": "13.1.4",
     "jsonc-eslint-parser": "^2.1.0",
+    "kill-port": "^2.0.1",
     "markdownlint": "^0.31.0",
     "markdownlint-cli": "^0.36.0",
     "ng-packagr": "~17.0.0",
