fix(llecoop): reduce init bundle size

--- a/apps/llecoop/project.json
+++ b/apps/llecoop/project.json
@@ -14,6 +14,15 @@
         "index": "libs/core/ng-entry-html/util/src/index.html",
         "browser": "apps/llecoop/src/main.ts",
         "polyfills": ["zone.js", "@angular/localize/init"],
+        "optimization": true,
+        "sourceMap": {
+          "scripts": true,
+          "styles": true,
+          "hidden": true,
+          "vendor": true
+        },
+        "namedChunks": true,
+        "aot": true,
         "tsConfig": "apps/llecoop/tsconfig.app.json",
         "inlineStyleLanguage": "scss",
         "assets": [
@@ -29,6 +38,7 @@
         "stylePreprocessorOptions": {
           "includePaths": ["libs/core/styles/util/material/src"]
         },
+        "allowedCommonJsDependencies": ["moment"],
         "scripts": []
       },
       "configurations": {
