--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "llecoop:firestore": "firebase emulators:start --only firestore",
     "llecoop:emulate": "yarn nx run llecoop-firebase:emulate",
     "llecoop:local": "npm-run-all --parallel --race llecoop:emulate llecoop:serve",
+    "llecoop:explore": "source-map-explorer dist/apps/llecoop/browser/**/*.js",
     "experimental:serve": "nx run experimental:serve",
     "experimental:lint": "nx run experimental:lint",
     "experimental:build": "nx run experimental:build --parallel",
@@ -188,6 +189,7 @@
     "postcss-url": "~10.1.3",
     "prettier": "^3.0.3",
     "rimraf": "^5.0.1",
+    "source-map-explorer": "^2.5.3",
     "tailwindcss": "^3.2.4",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
