feat(llecoop/category/list): #326 add delete for category
ISSUES CLOSED: #326

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,5 +44,6 @@
     }
   },
   "angular.log": "verbose",
-  "editor.formatOnPaste": true
+  "editor.formatOnPaste": true,
+  "cSpell.words": ["simondotm"]
 }
