--- a/apps/llecoop-firebase/environment/.env.local
+++ b/apps/llecoop-firebase/environment/.env.local
@@ -1,2 +1,3 @@
 # Firebase function emulator environment variables
 # https://firebase.google.com/docs/functions/config-env?gen=2nd#emulator_support
+AUDIENCE=Local Humans
