--- a/apps/llecoop-firebase/environment/.env
+++ b/apps/llecoop-firebase/environment/.env
@@ -1,2 +1,4 @@
 # Firebase function environment variables
 # https://firebase.google.com/docs/functions/config-env?gen=2nd#env-variables
+PLANET=Earth
+AUDIENCE=Humans
