--- a/package.json
+++ b/package.json
@@ -64,8 +64,11 @@
     "llecoop:a11y": "npm-run-all --parallel --race llecoop:http-server llecoop:a11y:run",
     "llecoop:build:github": "nx run llecoop:build:prod",
     "llecoop:firestore": "firebase emulators:start --only firestore",
+    "llecoop:functions": "firebase emulators:start --only functions",
     "llecoop:emulate": "yarn nx run llecoop-firebase:emulate",
     "llecoop:local": "npm-run-all --parallel --race llecoop:emulate llecoop:serve",
+    "llecoop:firebase:functions:build": "nx build llecoop-triggers",
+    "llecoop:firebase:functions:deploy": "firebase deploy --only functions",
     "llecoop:explore": "source-map-explorer dist/apps/llecoop/browser/**/*.js",
     "experimental:serve": "nx run experimental:serve",
     "experimental:lint": "nx run experimental:lint",
@@ -108,6 +111,8 @@
     "@nx/angular": "19.5.6",
     "angular-svg-icon": "^18.0.1",
     "babel-loader": "^8.0.2",
+    "firebase-admin": "^12.5.0",
+    "firebase-functions": "^5.1.1",
     "moment": "^2.30.1",
     "ngx-colors": "^3.6.0",
     "rxjs": "~7.8.0",
@@ -133,6 +138,7 @@
     "@ngx-formly/schematics": "^6.3.6",
     "@nrwl/cli": "15.9.3",
     "@nx/cypress": "19.5.6",
+    "@nx/esbuild": "19.5.6",
     "@nx/eslint": "19.5.6",
     "@nx/eslint-plugin": "19.5.6",
     "@nx/jest": "19.5.6",
@@ -161,18 +167,21 @@
     "cypress-pipe": "^2.0.0",
     "cz-customizable": "^7.2.1",
     "cz-customizable-ghooks": "^2.0.0",
+    "esbuild": "^0.19.2",
     "eslint": "~8.57.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-cypress": "^2.13.4",
     "eslint-plugin-deprecation": "^1.5.0",
     "eslint-plugin-jsdoc": "^48.11.0",
     "eslint-plugin-ngrx": "^2.1.4",
+    "firebase-functions-test": "^3.1.1",
     "firebase-tools": "^13.18.0",
     "husky": "^9.1.4",
     "jasmine-marbles": "~0.9.2",
     "jest": "29.7.0",
     "jest-axe": "^8.0.0",
     "jest-environment-jsdom": "29.7.0",
+    "jest-environment-node": "^29.4.1",
     "jest-preset-angular": "13.1.4",
     "jsonc-eslint-parser": "^2.1.0",
     "kill-port": "^2.0.1",
