feat(llecoop): #337 add triggers to respond to product CRUD operations affecting category
CLOSES #337

--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -5,7 +5,7 @@ on:
     workflows: [CI, E2E nasa-images, pa11y nasa-images]
     types: [completed]
     branches:
-      - 'develop'
+      - develop
 
 env:
   NPM_CONFIG_LEGACY_PEER_DEPS: true
