build(llecoop): increase budget maximumError to 1.35mg

--- a/.github/workflows/llecoop-deploy-main.yml
+++ b/.github/workflows/llecoop-deploy-main.yml
@@ -1,7 +1,9 @@
 name: Deploy Llecoop to remote hosting
 
 on:
-  push:
+  workflow_run:
+    workflows: [CI]
+    types: [completed]
     branches:
       - main
 
