fix: set category-feature-table config column to product count
fix some workflows problems

--- a/.github/workflows/llecoop-deploy-main.yml
+++ b/.github/workflows/llecoop-deploy-main.yml
@@ -1,9 +1,7 @@
 name: Deploy Llecoop to remote hosting
 
 on:
-  workflow_run:
-    workflows: [CI]
-    types: [completed]
+  push:
     branches:
       - main
 
