--- a/.github/workflows/nasa-images-deploy-dev.yml
+++ b/.github/workflows/nasa-images-deploy-dev.yml
@@ -1,9 +1,7 @@
 name: Deploy Nasa Images to staging
 
 on:
-  workflow_run:
-    workflows: [CI, E2E nasa-images, pa11y nasa-images]
-    types: [completed]
+  push:
     branches:
       - develop
 
