feat(llecoop/user/list): #350 add user list view, just the skeleton without real data

--- a/libs/llecoop/user/data-access/tsconfig.json
+++ b/libs/llecoop/user/data-access/tsconfig.json
@@ -12,15 +12,13 @@
   "include": [],
   "references": [
     {
-      "path": "./tsconfig.lib.json",
-      "composite": true
+      "path": "./tsconfig.lib.json"
     },
     {
-      "path": "./tsconfig.spec.json",
-      "composite": true
+      "path": "./tsconfig.spec.json"
     }
   ],
-  "extends": "../../../../../tsconfig.base.json",
+  "extends": "../../../../tsconfig.base.json",
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
