--- a/.github/workflows/nasa-images-deploy-dev.yml
+++ b/.github/workflows/nasa-images-deploy-dev.yml
@@ -1,7 +1,9 @@
 name: Deploy Nasa Images to staging
 
 on:
-  push:
+  workflow_run:
+    workflows: [CI, E2E nasa-images, pa11y nasa-images]
+    types: [completed]
     branches:
       - develop
 
