--- a/libs/llecoop/user/feature/list/project.json
+++ b/libs/llecoop/user/feature/list/project.json
@@ -1,16 +1,16 @@
 {
-  "name": "auth-firebase-data-access",
+  "name": "llecoop-user-feature-list",
   "$schema": "../../../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/shared/auth/firebase/data-access/src",
+  "sourceRoot": "libs/llecoop/user/feature/list/src",
   "prefix": "plastik",
   "projectType": "library",
-  "tags": ["type:data-access", "scope:shared"],
+  "tags": ["type:feature", "scope:llecoop"],
   "targets": {
     "test": {
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/shared/auth/firebase/data-access/jest.config.ts"
+        "jestConfig": "libs/llecoop/user/feature/list/jest.config.ts"
       }
     },
     "lint": {
