--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -41,6 +41,8 @@
       "@plastik/llecoop/product/data-access": ["libs/llecoop/product/data-access/src/index.ts"],
       "@plastik/llecoop/product/detail": ["libs/llecoop/product/feature/detail/src/index.ts"],
       "@plastik/llecoop/product/list": ["libs/llecoop/product/feature/list/src/index.ts"],
+      "@plastik/llecoop/user/data-access": ["libs/llecoop/user/data-access/src/index.ts"],
+      "@plastik/llecoop/user/list": ["libs/llecoop/user/feature/list/src/index.ts"],
       "@plastik/llecoop/util": ["libs/llecoop/util/src/index.ts"],
       "@plastik/nasa-images/data-access": ["libs/nasa-images/data-access/src/index.ts"],
       "@plastik/nasa-images/faqs": ["libs/nasa-images/faqs/feature/src/index.ts"],
