--- a/.github/workflows/nasa-images-deploy-dev.yml
+++ b/.github/workflows/nasa-images-deploy-dev.yml
@@ -2,7 +2,7 @@ name: Deploy Nasa Images to staging
 
 on:
   workflow_run:
-    workflows: [CI, E2E nasa-images, pa11y nasa-images]
+    workflows: [CI, pa11y nasa-images]
     types: [completed]
     branches:
       - develop
