feat(llecoop/order/list): #391 add user order list view
ISSUES CLOSED: #391

--- a/apps/llecoop/tsconfig.editor.json
+++ b/apps/llecoop/tsconfig.editor.json
@@ -1,6 +1,12 @@
 {
   "extends": "./tsconfig.json",
-  "include": ["src/**/*.ts"],
+  "include": [
+    "src/**/*.ts",
+    "../../libs/llecoop/order-list/data-access/src/isAnActiveOrderList.guard.ts",
+    "../../libs/shared/auth/firebase/data-access/src/isLogged.guard.ts",
+    "../../libs/shared/auth/firebase/data-access/src/isNotLogged.guard.ts",
+    "../../libs/shared/auth/firebase/data-access/src/isAdmin.guard.ts"
+  ],
   "compilerOptions": {
     "types": ["jest", "node"]
   }
