--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -44,6 +44,9 @@
         "libs/llecoop/order-list/data-access/src/index.ts"
       ],
       "@plastik/llecoop/order-list/list": ["libs/llecoop/order-list/feature/list/src/index.ts"],
+      "@plastik/llecoop/order-list/order-indicator": [
+        "libs/llecoop/order-list/feature/llecoop-order-indicator/src/index.ts"
+      ],
       "@plastik/llecoop/product/data-access": ["libs/llecoop/product/data-access/src/index.ts"],
       "@plastik/llecoop/product/detail": ["libs/llecoop/product/feature/detail/src/index.ts"],
       "@plastik/llecoop/product/list": ["libs/llecoop/product/feature/list/src/index.ts"],
