--- a/libs/llecoop/order-list/data-access/tsconfig.lib.json
+++ b/libs/llecoop/order-list/data-access/tsconfig.lib.json
@@ -8,5 +8,9 @@
     "types": []
   },
   "exclude": ["src/**/*.spec.ts", "src/test-setup.ts", "jest.config.ts", "src/**/*.test.ts"],
-  "include": ["src/**/*.ts", "src/isAnActiveOrderList.guard.ts"]
+  "include": [
+    "src/**/*.ts",
+    "../feature/user-order-detail/src/lib/isAnActiveOrderList.guard.ts",
+    "../feature/user-order-detail/src/lib/isAnActiveOrderListAndUserOrder.guard.ts"
+  ]
 }
