--- a/package.json
+++ b/package.json
@@ -100,12 +100,12 @@
     "@babel/preset-env": "^7.0.0",
     "@ngrx/component": "18.0.2",
     "@ngrx/component-store": "18.0.2",
-    "@ngrx/effects": "18.0.2",
-    "@ngrx/entity": "18.0.2",
-    "@ngrx/operators": "^18.0.2",
-    "@ngrx/router-store": "18.0.2",
-    "@ngrx/signals": "^18.0.2",
-    "@ngrx/store": "18.0.2",
+    "@ngrx/effects": "18.1.0",
+    "@ngrx/entity": "18.1.0",
+    "@ngrx/operators": "18.1.0",
+    "@ngrx/router-store": "18.1.0",
+    "@ngrx/signals": "18.1.0",
+    "@ngrx/store": "18.1.0",
     "@ngx-formly/core": "^6.3.6",
     "@ngx-formly/material": "^6.3.6",
     "@nx/angular": "19.5.6",
